rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2016_OSIProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2016_OSIProtocolSpecification.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 38, column 59]
    │
    │ 
 38 │  .&Type ( ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 39 │    OsiBind{{protocol}} |
 40 │    OsiBindResult{{protocol}} |
 41 │    OsiBindError{{protocol}} |
 42 │    OsiOperation{{protocol.&Operations}} |
 43 │    OsiUnbind |
 44 │    PresentationAbort )
    │
────╯
