rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2019_OSIProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2019_OSIProtocolSpecification.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 39, column 59]
    │
    │ 
 39 │  .&Type ( ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 40 │    OsiBind{{protocol}} |
 41 │    OsiBindResult{{protocol}} |
 42 │    OsiBindError{{protocol}} |
 43 │    OsiOperation{{protocol.&Operations}} |
 44 │    OsiUnbind |
 45 │    PresentationAbort )
    │
────╯
